2009-02-05 Frank Nägler <typo3@naegler.net>
	
	* search apllication controoler: added check in getWhereClause() => if we get an empty value, just return an empty string. else, this function returns a bad SQL where clause. 	

2009-02-05 Michaek Knabe <mk@e-netconsulting.de>
	
	* added pagebrowser to "myfriends" and "searchapplication"
	* changed the query for grouplist, so that it now is limited to the really needed groups

2009-02-04 Frank Nägler <typo3@naegler.net>
	
	* add storeing of search parameters into session for search application 	

2009-02-03 Frank Nägler <typo3@naegler.net>
	
	* add delete functionality for group videos	
	* add $count = null, $firstEntry = null as arguments for tx_community_model_GroupGateway->getAllGroups to use limit in query

2009-01-23 Frank Naegler  <typo3@naegler.net>

	* add search function to the listGroupsApplication
	* add findByWhereClause to the GroupGateway 

2009-01-22 Frank Naegler  <typo3@naegler.net>

	* add some new marker for invitation mails 

2008-12-17 Frank Naegler  <typo3@naegler.net>

	* add id to the settings in the privacy view 

2008-12-16 Ingo Renner  <ingo@typo3.org>

	* fixed a bug were the LLL view helper would retrieve an overwrite label from TS, but would not use it correctly

2008-12-15 Frank Naegler  <typo3@naegler.net>

	* change some SQL in userGateway, to fix correct matching friend relations

2008-12-14 Frank Naegler  <typo3@naegler.net>

	* adding hint after saving in the Privacy application.

2008-12-12 Frank Naegler  <typo3@naegler.net>

	* adding ACL support for MyFriends-Widget, MyGroups-Widget and LastVisitors-Widget

2008-12-06 Frank Naegler  <typo3@naegler.net>

	* adding support for location hash in redirect to editGroup

2008-12-05 Frank Naegler  <typo3@naegler.net>

	* adding method findUnconfirmedFriends to the userGateway, we need this to identify unconfirmed friend requests.

2008-12-03 Frank Naegler  <typo3@naegler.net>

	* adding pagebrowser to groupList
